@@ -1,5 +1,7 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Add $c->req->remote_user to disambiguate from $c->req->user (dwc)
+
 5.80004 2009-05-18 17:03:23
         - Rename the actions attribute in Catalyt::Controller to
           _controller_actions to avoid name clashes with application
